Fixed a bug when the GM changed the current day while looking at another month it would not change the visible month back to the current month. Removed the day from the top of the calendar as this was confusing. Added a new button below the calendar called Today that will make the current day selected and visible.

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -58,3 +58,14 @@
     }
   }
 }
+
+.calendar-controls{
+  display: flex;
+  flex-direction: row;
+  margin: -0.5rem auto 0.5rem;
+  max-width: 300px;
+
+  .spacer{
+    flex: 1;
+  }
+}
