--- a/src/styles/gm-controls.scss
+++ b/src/styles/gm-controls.scss
@@ -1,11 +1,3 @@
-.configure-button{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  margin: -0.5rem auto 0.5rem;
-  max-width: 300px;
-}
-
 .control{
   border: 1px solid #384582;
   padding: 0.15rem 0.5rem;
